--- a/src/GlobalUsingsAnalyzer.Package/GlobalUsingsAnalyzer.Package.csproj
+++ b/src/GlobalUsingsAnalyzer.Package/GlobalUsingsAnalyzer.Package.csproj
@@ -9,7 +9,7 @@
 
   <PropertyGroup>
     <PackageId>GlobalUsingsAnalyzer</PackageId>
-    <PackageVersion>1.0.0.0</PackageVersion>
+    <PackageVersion>1.0.1</PackageVersion>
     <Authors>BDSoftware</Authors>
 	<PackageLicenseExpression>MIT</PackageLicenseExpression>
     <RepositoryUrl>https://github.com/bjorndaniel/GlobalUsingsAnalyzer</RepositoryUrl>
@@ -31,14 +31,10 @@
 
     <PackAsTool>False</PackAsTool>
 
-    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageReadmeFile></PackageReadmeFile>
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="..\..\README.md">
-      <Pack>True</Pack>
-      <PackagePath>\</PackagePath>
-    </None>
     <None Include="..\GlobalUsingsAnalyzer.Vsix\logo.png">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
