--- a/src/GlobalUsingsAnalyzer.Vsix/GlobalUsingsAnalyzer.Vsix.csproj
+++ b/src/GlobalUsingsAnalyzer.Vsix/GlobalUsingsAnalyzer.Vsix.csproj
@@ -19,6 +19,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="logo.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="logo.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="17.4.2119" PrivateAssets="all" />
   </ItemGroup>
 
